Fixed small glitch with wrapper overflow

--- a/static/style.css
+++ b/static/style.css
@@ -17,17 +17,15 @@ a {
     box-shadow: inset 0 10px 50px 0 rgba(0, 0, 0, .4);
     height:100%;
     width:100%;
-    background-color:#8b0b0a;
     display:block;
     min-width:900px;
     min-height:600px;
-   
+    background-color:#8b0b0a;
     background-image: linear-gradient(bottom, rgb(97,10,0) 33%, rgb(159,2,0) 84%);
     background-image: -o-linear-gradient(bottom, rgb(97,10,0) 33%, rgb(159,2,0) 84%);
     background-image: -moz-linear-gradient(bottom, rgb(97,10,0) 33%, rgb(159,2,0) 84%);
     background-image: -webkit-linear-gradient(bottom, rgb(97,10,0) 33%, rgb(159,2,0) 84%);
     background-image: -ms-linear-gradient(bottom, rgb(97,10,0) 33%, rgb(159,2,0) 84%);
-
     background-image: -webkit-gradient(
       linear,
       left bottom,
@@ -35,6 +33,7 @@ a {
       color-stop(0.33, rgb(97,10,0)),
       color-stop(0.84, rgb(159,2,0))
     ); 
+    overflow: hidden;
 }
 
 .output {
